Implemented React Router, Navbar, Footer, Edit Employee, Delete Confirmation, Search, Pagination, Sorting, Toast Notifications, Loading Spinner, Dashboard UI improvements, and backend REST fixes